# lolq

./: Cargo.toml  config.toml
src/: main.rs
