[package]
name = "lolq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.7"
futures-util = "0.3"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
regex = "1.8"
