[package]
name = "lolq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
toml = "0.7"
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
base64 = "0.21"
sysinfo = "0.29"
url = "2.5"
anyhow = "1.0"